Fixed blank screen on Live
