# storage/api-docs/api-docs.json
@@ -5,10 +5,10 @@
         "version": "0.1"
     },
     "paths": {
-        "/api/auth/user/signin": {
+        "/api/v1/auth/user/signin": {
             "post": {
                 "summary": "User/Organization login",
-                "operationId": "ec463e8f893b861dbdaabbdfe01a1199",
+                "operationId": "b25c088b399a97e86d1156957fb2aae3",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -52,10 +52,10 @@
                 }
             }
         },
-        "/api/auth/user/signup": {
+        "/api/v1/auth/user/signup": {
             "post": {
                 "summary": "User Signup (Organization only)",
-                "operationId": "c95b4fb7f966543b2cd6fc6b4efab502",
+                "operationId": "c244b24745e044006c61e7edd0f39cb4",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -129,13 +129,18 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/organization/create": {
             "put": {
                 "summary": "Create Organization",
-                "operationId": "61912c1e427a9d32336f8429c5620bcc",
+                "operationId": "3ea93f0601f7239848915b6413ced52d",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -208,7 +213,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/withdrawal/request": {
@@ -234,7 +244,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "post": {
                 "summary": "Withdrawal Request",
@@ -275,7 +290,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         }
     },
